--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,10 +25,9 @@ jobs:
         run: npm run build
 
       - name: Deploy to methetech.github.io/ekobol
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: actions/setup-node@v4
         with:
-          personal_token: ${{ secrets.GH_PAT }}
-          external_repository: methetech/methetech.github.io
-          publish_branch: main
-          publish_dir: ./build      # Vite: ./dist | CRA: ./build | Next export: ./out
-          destination_dir: ekobol
+          node-version: 20
+          cache: yarn
+      - run: yarn --frozen-lockfile
+      - run: yarn build
