--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,22 +12,26 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install deps
-        run: npm ci || npm i
-
-      - name: Build
-        run: npm run build
-
-      - name: Deploy to methetech.github.io/ekobol
-      - uses: actions/setup-node@v4
+      - name: Setup Node (Yarn cache)
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: yarn
-      - run: yarn --frozen-lockfile
-      - run: yarn build
+
+      - name: Install deps
+        run: yarn --frozen-lockfile
+
+      - name: Build
+        run: yarn build    # ÇIKTI klasörün: CRA=build  | Vite=dist  | Next export=out
+
+      - name: Deploy to methetech.github.io/ekobol
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GH_PAT }}
+          external_repository: methetech/methetech.github.io
+          publish_branch: main
+          publish_dir: ./build      # Vite ise ./dist, Next export ise ./out yaz
+          destination_dir: ekobol
