--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,20 +12,17 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node (Yarn cache)
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: yarn
+          node-version: 20,
 
       - name: Install deps
-        run: yarn --frozen-lockfile
+        run: yarn install
 
       - name: Build
-        run: yarn build    # ÇIKTI klasörün: CRA=build  | Vite=dist  | Next export=out
+        run: yarn build         # ÇIKTI klasörün: CRA=build | Vite=dist | Next export=out
 
       - name: Deploy to methetech.github.io/ekobol
         uses: peaceiris/actions-gh-pages@v3
@@ -33,5 +30,5 @@ jobs:
           personal_token: ${{ secrets.GH_PAT }}
           external_repository: methetech/methetech.github.io
           publish_branch: main
-          publish_dir: ./build      # Vite ise ./dist, Next export ise ./out yaz
+          publish_dir: ./build   # Vite: ./dist | Next export: ./out
           destination_dir: ekobol
