--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.2.1",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "three": "^0.180.0",
     "web-vitals": "^2.1.4"
