--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,15 @@
     "aos": "^2.3.4",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
-    "i18next-http-backend": "^3.0.2",
-    "maath": "^0.10.8",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-i18next": "^16.2.1",
-    "react-router-dom": "^7.9.4",
+    "i18next-http-backend": "^2.5.2",
+    "react": "^18.3.1",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/drei": "^9.107.0",
+    "three": "^0.165.0",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
