--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.18.0",
     "@testing-library/dom": "^10.4.1",
