--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ekobol.com",
+  "homepage": "http://methetech.github.io/ekobol",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^9.107.0",
